Adds the guidelines and fixes a couple of links in the layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-block">
-            <h4 class="card-title"><a href="https://strava.github.io/api/v3/guidelines/">Brand Guidelines</a></h4>
+            <h4 class="card-title"><a href="/guidelines/">Brand Guidelines</a></h4>
             <p class="card-text">Read the guidelines for crediting Strava as a source of data in your app.</p>
           </div>
         </div>
