--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,17 +28,14 @@
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="/docs">Home</a>
               <a class="dropdown-item" href="/docs/reference">Reference</a>
-              <a class="dropdown-item" href="#/docs/authentication">Authentication</a>
+              <a class="dropdown-item" href="/docs/authentication">Authentication</a>
             </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Libraries</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Playground</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="/playground">Playground</a>
           </li>
         </ul>
       </div>
