--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
     <script src="/jquery.min.js"></script>
     <script src="/tether.min.js"></script>
     <script src="/bootstrap.min.js"></script>
-    {{ if isset .Params "scripts" }}{{ range .Params.scripts }}<script src="{{ printf "/%s" . | absURL }}"></script>{{ end }}{{ end }}
+    {{ if isset .Params "scripts" }}{{ range .Params.scripts }}<script src="{{ printf "/%s" . }}"></script>{{ end }}{{ end }}
   </body>
 </html>
