Initial homepage cleanup

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-  <div class="jumbotron">
+  <div class="jumbotron text-center">
     <div class="container">
       <h1 class="display-3">Welcome Developers</h1>
       <p>Strava athletes upload millions of activities every day. This rich data set yields diverse opportunities for developers, from creating new hardware to augmenting the Strava experience.</p>
@@ -7,40 +7,41 @@
   </div>
 
   <div class="container">
-    <div class="row">
-      <div class="col-md-4">
+    <div class='row'>
+      <div class='col-md-4'>
         <div class="card">
-          <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Card image cap">
+          <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Your Application" />
           <div class="card-block">
-            <h4 class="card-title">Your Application</h4>
+            <h3 class="card-title">Your Application</h3>
             <p class="card-text">Register or edit the details of your Strava application.</p>
-            <a href="https://www.strava.com/settings/api" class="btn btn-primary">Register or Manage</a>
+            <a href="https://www.strava.com/settings/api" class="btn btn-secondary">Register or Manage</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+
+      <div class='col-md-4'>
         <div class="card">
-          <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Card image cap">
+          <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="API Documentation">
           <div class="card-block">
-            <h4 class="card-title">API Documentation</h4>
+            <h3 class="card-title">API Documentation</h3>
             <p class="card-text">Access the documentation for the Strava API.</p>
-            <a href="/docs/reference" class="btn btn-primary">Read The Docs</a>
+            <a href="/docs/reference" class="btn btn-secondary">Read The Docs</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+
+      <div class='col-md-4'>
         <div class="card">
-          <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Card image cap">
+          <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Client Libraries">
           <div class="card-block">
-            <h4 class="card-title">Client Libraries</h4>
+            <h3 class="card-title">Client Libraries</h3>
             <p class="card-text">View the libraries you can leverage to easily integrate Strava data in your app.</p>
-            <a href="#" class="btn btn-primary">Coming Soon</a>
+            <a href="#" class="btn btn-secondary btn-disabled" disabled="disabled">Coming Soon</a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
+
+      <div class='col-md-4'>
         <div class="card">
           <div class="card-block">
             <h4 class="card-title"><a href="https://www.strava.com/apps">App Showcase</a></h4>
@@ -48,7 +49,8 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+
+      <div class='col-md-4'>
         <div class="card">
           <div class="card-block">
             <h4 class="card-title"><a href="/guidelines/">Brand Guidelines</a></h4>
@@ -56,7 +58,8 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+
+      <div class='col-md-4'>
         <div class="card">
           <div class="card-block">
             <h4 class="card-title"><a href="https://www.strava.com/api-agreement">Terms of Service</a></h4>
@@ -64,6 +67,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
