--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,33 +10,38 @@
     <link href="/bootstrap.min.css" rel="stylesheet">
     <link href="/tether.min.css" rel="stylesheet">
     <link href="/strava-developers.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro|Roboto+Slab|Roboto+Condensed" rel="stylesheet">
     {{ if isset .Params "styles" }}{{ range .Params.styles }}<link rel="stylesheet" href="{{ printf "/%s" .}}">{{ end }}{{ end }}
   </head>
 
   <body>
-    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="/">Strava Developers</a>
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+      <div class='container'>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="/">
+          <span class='strava-logo'>Strava</span>
+          Developers
+        </a>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">API Documentation</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="/docs">Home</a>
-              <a class="dropdown-item" href="/docs/reference">Reference</a>
-              <a class="dropdown-item" href="/docs/authentication">Authentication</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Libraries</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/playground">Playground</a>
-          </li>
-        </ul>
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">API Documentation</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown01">
+                <a class="dropdown-item" href="/docs">Home</a>
+                <a class="dropdown-item" href="/docs/reference">Reference</a>
+                <a class="dropdown-item" href="/docs/authentication">Authentication</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Libraries</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/playground">Playground</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
