--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,8 @@
   </div>
 
   <div class="container">
-    <div class='row'>
-      <div class='col-md-4'>
+    <div class="row">
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Your Application" />
           <div class="card-block">
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <div class='col-md-4'>
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="API Documentation">
           <div class="card-block">
@@ -30,7 +30,7 @@
         </div>
       </div>
 
-      <div class='col-md-4'>
+      <div class="col-md-4">
         <div class="card">
           <img class="card-img-top" src="http://labs.strava.com/assets/img/tile-heatmap1415.png" alt="Client Libraries">
           <div class="card-block">
@@ -40,8 +40,10 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class='col-md-4'>
+    <div class="row">
+      <div class="col-md-4">
         <div class="card">
           <div class="card-block">
             <h4 class="card-title"><a href="https://www.strava.com/apps">App Showcase</a></h4>
@@ -50,7 +52,7 @@
         </div>
       </div>
 
-      <div class='col-md-4'>
+      <div class="col-md-4">
         <div class="card">
           <div class="card-block">
             <h4 class="card-title"><a href="/guidelines/">Brand Guidelines</a></h4>
@@ -59,7 +61,7 @@
         </div>
       </div>
 
-      <div class='col-md-4'>
+      <div class="col-md-4">
         <div class="card">
           <div class="card-block">
             <h4 class="card-title"><a href="https://www.strava.com/api-agreement">Terms of Service</a></h4>
@@ -67,7 +69,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
