Fixes homepage typo

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class='display-3'>
           <p>Strava athletes upload millions of activities every day</p>
-          <h2>Our open API and this rich data set yields diverse opportunities for developers, from creating new hardware to augmenting the Strava experience.</h2>
+          <h2>Our open API and this rich data set yield diverse opportunities for developers, from creating new hardware to augmenting the Strava experience.</h2>
         </div>
       </div>
     </div>
