Add links to Career page and old API docs

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -68,9 +68,9 @@
       <div class="col-md-4">
         <div class="card">
           <div class="card-block">
-            <h3 class="card-title">Engineering Blog</h3>
-            <p class="card-text">Read what @StravaEng is up to.</p>
-            <a href="https://medium.com/strava-engineering" class="btn btn-primary">Enjoy</a>
+            <h3 class="card-title">@StravaEng</h3>
+            <p class="card-text">Read what we're up to or join the team.</p>
+            <a href="https://medium.com/strava-engineering" class="btn btn-primary">Blog</a> <a href="https://www.strava.com/careers" class="btn btn-primary">Careers</a>
           </div>
         </div>
       </div>
@@ -89,6 +89,15 @@
             <h3 class="card-title">Changelog</h3>
             <p class="card-text">Keep up to date with the latest API changes.</p>
             <a href="https://strava.github.io/api/v3/changelog/" class="btn btn-primary">Read</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-block">
+            <h3 class="card-title">Old Docs</h3>
+            <p class="card-text">In case you can't find something that hasn't been moved over yet. (β)</p>
+            <a href="https://strava.github.io/api/" class="btn btn-primary">Find</a>
           </div>
         </div>
       </div>
