--- a/swagger/athlete.json.mustache
+++ b/swagger/athlete.json.mustache
@@ -100,21 +100,21 @@
       "clubs": {
         "type": "array",
         "items": {
-          "$ref": "./club.json#/SummaryClub"
+          "$ref": "{{reference_prefix}}/club.json#/SummaryClub"
         },
         "description": "The athlete's clubs."
       },
       "bikes": {
         "type": "array",
         "items": {
-          "$ref": "./gear.json#/SummaryGear"
+          "$ref": "{{reference_prefix}}/gear.json#/SummaryGear"
         },
         "description": "The athlete's bikes."
       },
       "shoes": {
         "type": "array",
         "items": {
-          "$ref": "./gear.json#/SummaryGear"
+          "$ref": "{{reference_prefix}}/gear.json#/SummaryGear"
         },
         "description": "The athlete's shoes."
       }
