--- a/swagger/club.json.mustache
+++ b/swagger/club.json.mustache
@@ -175,7 +175,7 @@
         "description": "The unique identifier of the club this announcements was made in."
       },
       "athlete": {
-        "$ref": "./athlete.json#/SummaryAthlete"
+        "$ref": "{{reference_prefix}}/athlete.json#/SummaryAthlete"
       },
       "created_at": {
         "type": "string",
