--- a/swagger/comment.json.mustache
+++ b/swagger/comment.json.mustache
@@ -15,7 +15,7 @@
         "description": "The content of the comment"
       },
       "athlete": {
-        "$ref": "./athlete.json#/SummaryAthlete"
+        "$ref": "{{reference_prefix}}/athlete.json#/SummaryAthlete"
       },
       "created_at": {
         "type": "string",
