--- a/swagger/fault.json.mustache
+++ b/swagger/fault.json.mustache
@@ -6,7 +6,7 @@
       "errors": {
         "type": "array",
         "items": {
-          "$ref": "./fault.json#/Error"
+          "$ref": "{{reference_prefix}}/fault.json#/Error"
         },
         "description": "The set of specific errors associated with this fault, if any."
       },
