--- a/swagger/lap.json.mustache
+++ b/swagger/lap.json.mustache
@@ -8,10 +8,10 @@
         "description": "The unique identifier of this lap"
       },
       "activity": {
-        "$ref": "./activity.json#/MetaActivity"
+        "$ref": "{{reference_prefix}}/activity.json#/MetaActivity"
       },
       "athlete": {
-        "$ref": "./athlete.json#/MetaAthlete"
+        "$ref": "{{reference_prefix}}/athlete.json#/MetaAthlete"
       },
       "average_cadence": {
         "type": "number",
