--- a/swagger/segment_leaderboard.json.mustache
+++ b/swagger/segment_leaderboard.json.mustache
@@ -10,7 +10,7 @@
       "entries": {
         "type": "array",
         "items": {
-          "$ref": "./segment_leaderboard.json#/SegmentLeaderboardEntry"
+          "$ref": "{{reference_prefix}}/segment_leaderboard.json#/SegmentLeaderboardEntry"
         }
       }
     }
