--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -2,7 +2,7 @@
   "Activity": {
     "allOf": [
       {
-        "$ref": "./activity.json#/SummaryActivity"
+        "$ref": "{{reference_prefix}}/activity.json#/SummaryActivity"
       },
       {
         "properties": {
@@ -11,10 +11,10 @@
             "description": "The description of the activity"
           },
           "photos": {
-            "$ref": "./photo.json#/PhotosSummary"
+            "$ref": "{{reference_prefix}}/photo.json#/PhotosSummary"
           },
           "gear": {
-            "$ref": "./gear.json#/SummaryGear"
+            "$ref": "{{reference_prefix}}/gear.json#/SummaryGear"
           },
           "calories": {
             "type": "number",
@@ -24,7 +24,7 @@
           "segment_efforts": {
             "type": "array",
             "items": {
-              "$ref": "./segment_effort.json#/SegmentEffort"
+              "$ref": "{{reference_prefix}}/segment_effort.json#/SegmentEffort"
             }
           },
           "device_name": {
@@ -38,27 +38,27 @@
           "splits_metric": {
             "type": "array",
             "items": {
-              "$ref": "./split.json#/Split"
+              "$ref": "{{reference_prefix}}/split.json#/Split"
             },
             "description": "The splits of this activity in metric units (for runs)"
           },
           "splits_standard": {
             "type": "array",
             "items": {
-              "$ref": "./split.json#/Split"
+              "$ref": "{{reference_prefix}}/split.json#/Split"
             },
             "description": "The splits of this activity in imperial units (for runs)"
           },
           "laps": {
             "type": "array",
             "items": {
-              "$ref": "./lap.json#/Lap"
+              "$ref": "{{reference_prefix}}/lap.json#/Lap"
             }
           },
           "best_efforts": {
             "type": "array",
             "items": {
-              "$ref": "./segment_effort.json#/SegmentEffort"
+              "$ref": "{{reference_prefix}}/segment_effort.json#/SegmentEffort"
             }
           }
         }
@@ -68,7 +68,7 @@
   "SummaryActivity": {
     "allOf": [
       {
-        "$ref": "./activity.json#/MetaActivity"
+        "$ref": "{{reference_prefix}}/activity.json#/MetaActivity"
       },
       {
         "properties": {
@@ -81,7 +81,7 @@
             "description": "The identifier of the upload that resulted in this activity"
           },
           "athlete": {
-            "$ref": "./athlete.json#/MetaAthlete"
+            "$ref": "{{reference_prefix}}/athlete.json#/MetaAthlete"
           },
           "name": {
             "type": "string",
@@ -116,7 +116,7 @@
             "description": "The activity's lowest elevation, in meters"
           },
           "type": {
-            "$ref": "./activity_type.json#/ActivityType"
+            "$ref": "{{reference_prefix}}/activity_type.json#/ActivityType"
           },
           "start_date": {
             "type": "string",
@@ -133,10 +133,10 @@
             "description": "The timezone of the activity"
           },
           "start_latlng": {
-            "$ref": "./latlng.json#/LatLng"
+            "$ref": "{{reference_prefix}}/latlng.json#/LatLng"
           },
           "end_latlng": {
-            "$ref": "./latlng.json#/LatLng"
+            "$ref": "{{reference_prefix}}/latlng.json#/LatLng"
           },
           "achievement_count": {
             "type": "integer",
@@ -164,7 +164,7 @@
             "description": "The number of Instagram and Strava photos for this activity"
           },
           "map": {
-            "$ref": "./map.json#/PolylineMap"
+            "$ref": "{{reference_prefix}}/map.json#/PolylineMap"
           },
           "trainer": {
             "type": "boolean",
@@ -237,7 +237,7 @@
         "description": "The name of the activity"
       },
       "type": {
-        "$ref": "./activity_type.json#/ActivityType"
+        "$ref": "{{reference_prefix}}/activity_type.json#/ActivityType"
       },
       "private": {
         "type": "boolean",
