--- a/swagger/segment_effort.json.mustache
+++ b/swagger/segment_effort.json.mustache
@@ -2,7 +2,7 @@
   "SegmentEffort": {
     "allOf": [
       {
-        "$ref": "./segment_effort.json#/SummarySegmentEffort"
+        "$ref": "{{reference_prefix}}/segment_effort.json#/SummarySegmentEffort"
       },
       {
         "properties": {
@@ -11,10 +11,10 @@
             "description": "The name of the segment on which this effort was performed"
           },
           "activity": {
-            "$ref": "./activity.json#/MetaActivity"
+            "$ref": "{{reference_prefix}}/activity.json#/MetaActivity"
           },
           "athlete": {
-            "$ref": "./athlete.json#/MetaAthlete"
+            "$ref": "{{reference_prefix}}/athlete.json#/MetaAthlete"
           },
           "moving_time": {
             "type": "integer",
@@ -53,7 +53,7 @@
             "description": "The maximum heart rate of the athlete during this effort"
           },
           "segment": {
-            "$ref": "./segment.json#/SummarySegment"
+            "$ref": "{{reference_prefix}}/segment.json#/SummarySegment"
           },
           "kom_rank": {
             "type": "integer",
